feat(cotani): add cotani-event module and improve various modules
- Implement cotani-event module featuring EventBus, EventDispatcher, EventRegistry, and EventSubscription
- Update cotani-config with RecordConfigBinder validation improvements
- Add cotani-core bootstrap changes and lifecycle tests
- Refactor cotani-economy currency formatter logic
- Support resolver improvements in cotani-item SkullTextureResolver
- Add SQLiteStorageProvider improvements and tests in cotani-storage
- Improve throttler in cotani-task with added test cases
- Implement pending teleport listener improvements and tests in cotani-teleport
- Introduce AudienceMessages and MiniMessages utility in cotani-text
- Enhance SimpleUserService and resolve async queries in cotani-user
- Ensure spotless formatting is fully applied and verified